--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+<header>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+	<link href="././resources/css/Login.css" rel="stylesheet">
+</header>
 <body>
-	<link rel="stylesheet"
-		href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-	<link href="/AmostraDeTalentos/src/main/webapp/resources/css/login.css"
-		rel="stylesheet">
-
 	<div class="main">
-
-
 		<div class="container">
 			<center>
 				<div class="middle">
