--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 <header>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+	<link rel="stylesheet"
+		href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 	<link href="././resources/css/Login.css" rel="stylesheet">
 </header>
+
 <body>
+	</div>
+	<div class="footer">Halle Systems Co.</div>
+	</div>
+
+	</div>
 	<div class="main">
+
+
 		<div class="container">
 			<center>
 				<div class="middle">
@@ -42,12 +51,14 @@
 
 					</div>
 					<!-- end login -->
+
 					<div class="logo">
-						LOGO
+
+						Halle Systems
 
 						<div class="clearfix"></div>
-					</div>
 
+					</div>
 				</div>
 			</center>
 		</div>
