commit web <ta quase (pelo menos o login)>

--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -7,14 +7,7 @@
 </header>
 
 <body>
-	</div>
-	<div class="footer">Halle Systems Co.</div>
-	</div>
-
-	</div>
 	<div class="main">
-
-
 		<div class="container">
 			<center>
 				<div class="middle">
@@ -54,16 +47,23 @@
 					<!-- end login -->
 
 					<div class="logo">
-
-						Halle Systems
-
-						<div class="clearfix"></div>
-
+						<div class="img-logo">
+							<img src="././resources/img/img-logo.png" />
+						</div>
+						<p>Halle Systems</p>
 					</div>
 				</div>
 			</center>
 		</div>
-
 	</div>
+	<div class="footer">
+		<div class="left">
+			Halle Systems Co.
+		</div>
+		<div class="right">
+			All right reserved (full trollis)	
+		</div>
+	</div>
+	
 </body>
 </html>
