--- a/AmostraDeTalentos/src/main/webapp/template.html
+++ b/AmostraDeTalentos/src/main/webapp/template.html
@@ -484,7 +484,7 @@
     <script src="js/plugins/morris/raphael.min.js"></script>
     <script src="js/plugins/morris/morris.min.js"></script>
     <script src="js/plugins/morris/morris-data.js"></script>
-
+--veraqui!
 </body>
 
 </html>
