--- a/AmostraDeTalentos/src/main/webapp/template.html
+++ b/AmostraDeTalentos/src/main/webapp/template.html
@@ -475,16 +475,15 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="././resources/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="././resources/js/bootstrap.min.js"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script src="js/plugins/morris/raphael.min.js"></script>
-    <script src="js/plugins/morris/morris.min.js"></script>
-    <script src="js/plugins/morris/morris-data.js"></script>
---veraqui!
-</body>
+    <script src="././resources/js/templateJS/plugins/morris/raphael.min.js"></script>
+    <script src="././resources/js/templateJS/plugins/morris/morris.min.js"></script>
+    <script src="././resources/js/templateJS/plugins/morris/morris-data.js"></script>
+	
 
 </html>
