Commit Web <FORÇA NA PERUCA>

--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet"
 		href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 	<link href="././resources/css/Login.css" rel="stylesheet" />
-	
+
 </header>
 
 <body>
@@ -35,7 +35,7 @@
 										class="small-text" href="#">Forgot password?</a></span> <span
 										style="width: 50%; text-align: right; display: inline-block;"><input
 										type="submit" value="Sign In"></span>
-						
+
 								</div>
 
 							</fieldset>
@@ -58,13 +58,9 @@
 		</div>
 	</div>
 	<div class="footer">
-		<div class="left">
-			Halle Systems Co.
-		</div>
-		<div class="right">
-			All right reserved (full trollis)	
-		</div>
+		<div class="left">Halle Systems Co.</div>
+		<div class="right">All right reserved (full trollis)</div>
 	</div>
-	
+
 </body>
 </html>
