--- a/AmostraDeTalentos/src/main/webapp/index_example.html
+++ b/AmostraDeTalentos/src/main/webapp/index_example.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="app">
 
 <head>
 
@@ -199,7 +199,6 @@
 								aria-hidden="true">&times;</button>
 							<i class="fa fa-info-circle"></i> <strong>Like SB Admin?</strong>
 							Try out <a
-								href="http://startbootstrap.com/template-overviews/sb-admin-2"
 								class="alert-link">SB Admin 2</a> for additional features!
 						</div>
 					</div>
@@ -470,4 +469,10 @@
 	<script src="././resources/js/templateJS/plugins/morris/raphael.min.js"></script>
 	<script src="././resources/js/templateJS/plugins/morris/morris.min.js"></script>
 	<script src="././resources/js/templateJS/plugins/morris/morris-data.js"></script>
+
+	<!-- AngularJS -->
+	<script src="././resources/js/angular.min.js"></script>
+    <script src="././resources/js/angular-cookies.min.js"></script>
+    <script src="././resources/js/angular-route.min.js"></script>
+    <script src="././resources/js/app.js"></script>
 </html>
