Commit Web <Toolbars>

--- a/AmostraDeTalentos/src/main/webapp/menu.html
+++ b/AmostraDeTalentos/src/main/webapp/menu.html
@@ -106,12 +106,12 @@
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav side-nav">
 			<li class="active"><a href="#/agenda"><i
-					class="fa fa-fw fa-calendar"></i> Agenda</a></li>
+					class="fa fa-fw fa-calendar"></i>Agendas</a></li>
 			<li class="active"><a href="#/agenda"><i
 					class="fa fa-fw fa-group"></i> Clientes</a></li>
 			<li class="active"><a href="#/agenda"><i
 					class="fa fa-fw fa-handshake-o"></i> Fornecedores</a></li>
-		</ul>
+			</ul>
 	</div>
 </nav>
 
