Commit Web <Toolbars>

--- a/AmostraDeTalentos/src/main/webapp/toolbars.html
+++ b/AmostraDeTalentos/src/main/webapp/toolbars.html
@@ -36,17 +36,15 @@
 									<div class="fc-view fc-month-view fc-basic-view" style>
 									<table class></table>
 								</div>
+						
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> 
 </body>
 
-
-
-
-
+</body>
 </html>
