Commit Web <Esse é pnc>

--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -25,9 +25,8 @@
 	<link rel="stylesheet" href="././resources/css/login.css" />
 	
 	<!--  Calendario -->
-	<link href="././resources/css/fullcalendar.min.css" rel="stylesheet" />>
-	<link href="././resources/css/fullcalendar.print.min.css" rel="stylesheet" />
-
+	<link href="././resources/css/fullcalendar.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="././resources/css/calendario.css" />
 </head>
 
 <body>
