--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -25,7 +25,6 @@
 	<link rel="stylesheet" href="././resources/css/login.css" />
 	
 	<!--  Calendario -->
-	<link href="././resources/css/fullcalendar.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="././resources/css/calendario.css" />
 </head>
 
@@ -45,8 +44,7 @@
     <script src="././resources/js/app.js"></script>
    
    <!-- Calendario JS -->
-    <script src="././resources/js/moment.min.js"></script>
-    <script src="././resources/js/fullcalendar.min.js"></script>
+    <script src="././resources/js/calendario.js"></script>
     
     <!-- Controllers -->
 	<script src="././resources/js/controller/login.controller.js"></script>    
