--- a/AmostraDeTalentos/src/main/webapp/menu.html
+++ b/AmostraDeTalentos/src/main/webapp/menu.html
@@ -1,5 +1,6 @@
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div ng-controller="MenuController as menu">
 	<!-- Brand and toggle get grouped for better mobile display -->
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -23,7 +24,7 @@
 							</span>
 							<div class="media-body">
 								<h5 class="media-heading">
-									<strong>John Smith</strong>
+									<strong>{{menu.usuario}}</strong>
 								</h5>
 								<p class="small text-muted">
 									<i class="fa fa-clock-o"></i> Yesterday at 4:32 PM
@@ -39,7 +40,7 @@
 							</span>
 							<div class="media-body">
 								<h5 class="media-heading">
-									<strong>John Smith</strong>
+									<strong>{{menu.usuario}}</strong>
 								</h5>
 								<p class="small text-muted">
 									<i class="fa fa-clock-o"></i> Yesterday at 4:32 PM
@@ -55,7 +56,7 @@
 							</span>
 							<div class="media-body">
 								<h5 class="media-heading">
-									<strong>John Smith</strong>
+									<strong>{{menu.usuario}}</strong>
 								</h5>
 								<p class="small text-muted">
 									<i class="fa fa-clock-o"></i> Yesterday at 4:32 PM
@@ -87,7 +88,7 @@
 				<li><a href="#">View All</a></li>
 			</ul></li>
 		<li class="dropdown"><a href="#" class="dropdown-toggle"
-			data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b
+			data-toggle="dropdown"><i class="fa fa-user"></i> {{menu.usuario}} <b
 				class="caret"></b></a>
 			<ul class="dropdown-menu">
 				<li><a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
@@ -112,6 +113,7 @@
 			<li class="active"><a href="#/agenda"><i
 					class="fa fa-fw fa-handshake-o"></i> Fornecedores</a></li>
 			</ul>
+	</div>
 	</div>
 </nav>
 
