--- a/AmostraDeTalentos/src/main/webapp/calendario.html
+++ b/AmostraDeTalentos/src/main/webapp/calendario.html
@@ -9,12 +9,12 @@
 				<div class="modal-dialog">
 				    <div class="modal-content">
 				        <div class="modal-header">
-				            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span> <span class="sr-only">close</span></button>
+				            <button type="button" class="close" data-dismiss="modal"><i class="fa fa-close"></i></button>
 				            <h4 id="modalTitle" class="modal-title"></h4>
 				        </div>
 				        <div id="modalBody" class="modal-body"> </div>
 				        <div class="modal-footer">
-				            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				            <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
 				        </div>
 				    </div>
 				</div>
