--- a/AmostraDeTalentos/src/main/webapp/home.html
+++ b/AmostraDeTalentos/src/main/webapp/home.html
@@ -17,91 +17,47 @@
 				
 				<div class="row">
 					<div class="col-lg-4 col-md-6">
-						<div class="panel panel-primary">
-							<div class="panel-heading">
-								<div class="row">
-									<div class="col-xs-3">
-										<i class="fa fa-comments fa-5x"></i>
-									</div>
-									<div class="col-xs-9 text-right">
-										<div class="huge">26</div>
-										<div>New Comments!</div>
+						<a href="#/agenda">
+							<div class="panel panel-primary">
+								<div class="panel-heading">
+									<div class="row">
+										<div class="col-xs-2">
+											<i class="fa fa-calendar fa-5x"></i>
+										</div>
+										<div class="col-xs-10 text-right">
+											<h2>Minha agenda</h2>
+										</div>
 									</div>
 								</div>
 							</div>
-							<a href="#">
-								<div class="panel-footer">
-									<span class="pull-left">View Details</span> <span
-										class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-									<div class="clearfix"></div>
-								</div>
-							</a>
-						</div>
+						</a>
 					</div>
-					<div class="col-lg-3 col-md-6">
+					<div class="col-lg-4 col-md-6">
 						<div class="panel panel-green">
 							<div class="panel-heading">
 								<div class="row">
-									<div class="col-xs-3">
-										<i class="fa fa-tasks fa-5x"></i>
+									<div class="col-xs-2">
+										<i class="fa fa-group fa-5x"></i>
 									</div>
-									<div class="col-xs-9 text-right">
-										<div class="huge">12</div>
-										<div>New Tasks!</div>
+									<div class="col-xs-10 text-right">
+										<h2>Clientes</h2>
 									</div>
 								</div>
 							</div>
-							<a href="#">
-								<div class="panel-footer">
-									<span class="pull-left">View Details</span> <span
-										class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-									<div class="clearfix"></div>
-								</div>
-							</a>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-6">
+					<div class="col-lg-4 col-md-6">
 						<div class="panel panel-yellow">
 							<div class="panel-heading">
 								<div class="row">
-									<div class="col-xs-3">
-										<i class="fa fa-shopping-cart fa-5x"></i>
+									<div class="col-xs-2">
+										<i class="fa fa-handshake-o fa-5x"></i>
 									</div>
-									<div class="col-xs-9 text-right">
-										<div class="huge">124</div>
-										<div>New Orders!</div>
-									</div>
-								</div>
-							</div>
-							<a href="#">
-								<div class="panel-footer">
-									<span class="pull-left">View Details</span> <span
-										class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-									<div class="clearfix"></div>
-								</div>
-							</a>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6">
-						<div class="panel panel-red">
-							<div class="panel-heading">
-								<div class="row">
-									<div class="col-xs-3">
-										<i class="fa fa-support fa-5x"></i>
-									</div>
-									<div class="col-xs-9 text-right">
-										<div class="huge">13</div>
-										<div>Support Tickets!</div>
+									<div class="col-xs-10 text-right">
+										<h2>Fornecedores</h2>
 									</div>
 								</div>
 							</div>
-							<a href="#">
-								<div class="panel-footer">
-									<span class="pull-left">View Details</span> <span
-										class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-									<div class="clearfix"></div>
-								</div>
-							</a>
 						</div>
 					</div>
 				</div>
