--- a/AmostraDeTalentos/src/main/webapp/menu.html
+++ b/AmostraDeTalentos/src/main/webapp/menu.html
@@ -2,22 +2,18 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div ng-controller="MenuController as menu">
 	<!-- Brand and toggle get grouped for better mobile display -->
-	<div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse"
-			data-target=".navbar-ex1-collapse">
-			<span class="sr-only">Toggle navigation</span> <span
-				class="icon-bar"></span> <span class="icon-bar"></span> <span
-				class="icon-bar"></span>
-		</button>
-		<a class="navbar-brand" href="index.html">Halle Systems</a>
-	</div>
-	<!-- Top Menu Items -->
-	<ul class="nav navbar-right top-nav">
-		<li class="dropdown"><a href="#" class="dropdown-toggle"
-			data-toggle="dropdown"><i class="fa fa-envelope"></i> <b
-				class="caret"></b></a>
-			<ul class="dropdown-menu message-dropdown">
-				<li class="message-preview"><a href="#">
+		<div class="navbar-header col-lg-10">
+			<a class="navbar-brand navBarHeader" href="#/home">Halle Systems</a>
+		</div>
+		<!-- Top Menu Items -->
+		<ul class="nav navbar-right navBarHeaderRight col-lg-2">
+			<li class="dropdown col-lg-3">
+				<div class="row dropdown-toggle" data-toggle="dropdown">
+					<i class="fa fa-envelope fa-2x"></i> 
+					<b class="caret"></b>
+				</div>
+				<ul class="dropdown-menu message-dropdown">
+					<li class="message-preview">
 						<div class="media">
 							<span class="pull-left"> <img class="media-object"
 								src="http://placehold.it/50x50" alt="">
@@ -32,8 +28,8 @@
 								<p>Lorem ipsum dolor sit amet, consectetur...</p>
 							</div>
 						</div>
-				</a></li>
-				<li class="message-preview"><a href="#">
+					</li>
+					<li class="message-preview">
 						<div class="media">
 							<span class="pull-left"> <img class="media-object"
 								src="http://placehold.it/50x50" alt="">
@@ -48,72 +44,42 @@
 								<p>Lorem ipsum dolor sit amet, consectetur...</p>
 							</div>
 						</div>
-				</a></li>
-				<li class="message-preview"><a href="#">
-						<div class="media">
-							<span class="pull-left"> <img class="media-object"
-								src="http://placehold.it/50x50" alt="">
-							</span>
-							<div class="media-body">
-								<h5 class="media-heading">
-									<strong>{{menu.usuario}}</strong>
-								</h5>
-								<p class="small text-muted">
-									<i class="fa fa-clock-o"></i> Yesterday at 4:32 PM
-								</p>
-								<p>Lorem ipsum dolor sit amet, consectetur...</p>
-							</div>
-						</div>
-				</a></li>
-				<li class="message-footer"><a href="#">Read All New
-						Messages</a></li>
-			</ul></li>
-		<li class="dropdown"><a href="#" class="dropdown-toggle"
-			data-toggle="dropdown"><i class="fa fa-bell"></i> <b
-				class="caret"></b></a>
-			<ul class="dropdown-menu alert-dropdown">
-				<li><a href="#">Alert Name <span
-						class="label label-default">Alert Badge</span></a></li>
-				<li><a href="#">Alert Name <span
-						class="label label-primary">Alert Badge</span></a></li>
-				<li><a href="#">Alert Name <span
-						class="label label-success">Alert Badge</span></a></li>
-				<li><a href="#">Alert Name <span class="label label-info">Alert
-							Badge</span></a></li>
-				<li><a href="#">Alert Name <span
-						class="label label-warning">Alert Badge</span></a></li>
-				<li><a href="#">Alert Name <span
-						class="label label-danger">Alert Badge</span></a></li>
-				<li class="divider"></li>
-				<li><a href="#">View All</a></li>
-			</ul></li>
-		<li class="dropdown"><a href="#" class="dropdown-toggle"
-			data-toggle="dropdown"><i class="fa fa-user"></i> {{menu.usuario}} <b
-				class="caret"></b></a>
-			<ul class="dropdown-menu">
-				<li><a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-				</li>
-				<li><a href="#"><i class="fa fa-fw fa-envelope"></i>
-						Inbox</a></li>
-				<li><a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-				</li>
-				<li class="divider"></li>
-				<li><a href="#"><i class="fa fa-fw fa-power-off"></i> Log
-						Out</a></li>
-			</ul></li>
-	</ul>
-	
-	<!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-	<div class="collapse navbar-collapse navbar-ex1-collapse">
-		<ul class="nav navbar-nav side-nav">
-			<li class="active"><a href="#/agenda"><i
-					class="fa fa-fw fa-calendar"></i>Agendas</a></li>
-			<li class="active"><a href="#/agenda"><i
-					class="fa fa-fw fa-group"></i> Clientes</a></li>
-			<li class="active"><a href="#/agenda"><i
-					class="fa fa-fw fa-handshake-o"></i> Fornecedores</a></li>
-			</ul>
-	</div>
+					</li>
+					<li class="message-footer"><a href="#/home">Read All New
+							Messages</a></li>
+				</ul></li>
+			<li class="dropdown col-lg-3">
+				<div class="row dropdown-toggle" data-toggle="dropdown" ng-click="menu.pegarNotificacoes()">
+					<i class="fa fa-bell fa-2x"></i> 
+					<b class="caret"></b>
+				</div>
+				<ul class="dropdown-menu alert-dropdown">
+					<div ng-repeat="not in menu.notificacoes">
+						<li class="notificacoes"><a href="#/agenda"><span class="label label-{{not.tipo}} ">{{not.titulo}}</span></a></li>
+					</div>
+				</ul></li>
+			<li class="dropdown col-lg-6">
+				<div class="row dropdown-toggle" data-toggle="dropdown">
+					<i class="fa fa-user fa-2x"></i>
+					{{menu.usuario}} 
+					<b class="caret"></b>
+				</div>
+				<ul class="dropdown-menu">
+					<li><a href="#/perfil"><i class="fa fa-fw fa-user"></i> Perfil</a></li>
+					<li><a href="#/configuracoes"><i class="fa fa-fw fa-gear"></i> Configurações</a></li>
+					<li class="divider"></li>
+					<li><a ng-click="menu.logout()"><i class="fa fa-fw fa-power-off"></i> Sair</a></li>
+				</ul></li>
+		</ul>
+		
+		<!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+		<div class="collapse navbar-collapse navbar-ex1-collapse">
+			<ul class="nav navbar-nav side-nav">
+				<li class="active"><a href="#/agenda"><i class="fa fa-2x fa-calendar"></i><span class="item-menu-lateral">Agenda</span></a></li>
+				<li class="active"><a href="#/cliente"><i class="fa fa-2x fa-group"></i><span class="item-menu-lateral">Clientes</span></a></li>
+				<li class="active"><a href="#/fornecedor"><i class="fa fa-2x fa-handshake-o"></i><span class="item-menu-lateral">Fornecedores</span></a></li>
+				</ul>
+		</div>
 	</div>
 </nav>
 
