Commit Logo e Background

--- a/AmostraDeTalentos/src/main/webapp/login.html
+++ b/AmostraDeTalentos/src/main/webapp/login.html
@@ -22,10 +22,7 @@
 				</div>
 				<div class="right border-left col-lg-6">
 					<div  class="row space-Left">
-						<img class="img-logo" src="././resources/img/img-logo.png" />
-					</div>
-					<div class="row space-Left">
-						<p class="logo">Halle Systems</p>
+						<img class="img-logo" src="././resources/img/Logo_Principal.png" />
 					</div>
 				</div>
 			</div>
@@ -34,5 +31,5 @@
 </div>
 <div class="footer">
 	<div class="left">Halle Systems Co.</div>
-	<div class="right">All right reserved (full trollis)</div>
+	<div class="right">All rights reserved.</div>
 </div>
