--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="">
 
 	<title>Halle</title>
-	<link rel="icon" href="././resources/img/img-logo.png">
+	<link rel="icon" href="././resources/img/Logo_Principal.png">
 
 	<!-- Bootstrap Core CSS -->
 	<link rel="stylesheet" href="././resources/css/bootstrap.min.css">
