--- a/AmostraDeTalentos/src/main/webapp/calendario.html
+++ b/AmostraDeTalentos/src/main/webapp/calendario.html
@@ -17,14 +17,14 @@
 			        			<div class="row">
 									<div class="col-md-6">
 										<label for="cliente">Cliente</label> 
-										<select class="form-control" ng-model="calendario.agendamento.codigoCliente" id="cliente">
+										<select class="form-control" ng-model="calendario.agendamento.codigoCliente" id="cliente" required>
 											<option value="" disabled selected>Selecione</option>
 											<option ng-repeat="cliente in calendario.clientes" value="{{cliente.codigo}}">{{cliente.nome}}</option>
 										</select>
 									</div>
 									<div class="col-md-6">
 										<label for="servico">Serviço</label> 
-										<select class="form-control" ng-model="calendario.agendamento.codigoServico" id="servico">
+										<select class="form-control" ng-model="calendario.agendamento.codigoServico" id="servico" required>
 											<option value="" disabled selected>Selecione</option>
 											<option ng-repeat="serv in calendario.servicos" value="{{serv.codigo}}">{{serv.descricao}}</option>
 										</select>
@@ -33,18 +33,18 @@
 								<div class="row">
 									<div class="col-md-5">
 										<label for="funcionario">Funcionário</label> 
-										<select class="form-control" ng-model="calendario.agendamento.codigoFuncionario" id="funcionario">
+										<select class="form-control" ng-model="calendario.agendamento.codigoFuncionario" id="funcionario" required>
 											<option value="" disabled selected>Selecione</option>
 											<option ng-repeat="fun in calendario.funcionarios" value="{{fun.codigo}}">{{fun.nome}}</option>
 										</select>
 									</div>
 									<div class="col-md-4">
 										<label for="diaAgendamento">Data de agendamento</label> 
-										<input id="diaAgendamento" class="form-control" type="date" ng-model="calendario.agendamento.data"/>
+										<input id="diaAgendamento" class="form-control" type="date" ng-model="calendario.agendamento.data" required/>
 									</div>
 									<div class="col-md-3">
 										<label for="horario">Horário</label> 
-										<input class="form-control col-md-6" id="horario" type="time" ng-model="calendario.agendamento.data"/>
+										<input class="form-control col-md-6" id="horario" type="time" ng-model="calendario.agendamento.data" required/>
 									</div>
 								</div>
 								<div class="row">
@@ -57,12 +57,41 @@
 							</div>
 						</div>
 				        <div class="modal-footer">
-				            <button type="button" ng-click="calendario.limpar()" class="btn btn-default" data-dismiss="modal">Ok</button>
+				        	<button type="button" ng-click="calendario.concluir()" class="btn btn-info" data-dismiss="modal">Concluir</button>
+				        	<button type="button" onclick="$('#confirmaCancelarModal').show()" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+				        	<button type="button" ng-click="calendario.salvar()" class="btn btn-success" data-dismiss="modal"><i class="fa fa-floppy-o fa-2x"></i></button>
+				        	<button type="button" onclick="$('#confirmaExcluirModal').show()" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-trash-o fa-2x"></i></button>
+				            <button type="button" ng-click="calendario.limpar()" class="btn btn-warning" data-dismiss="modal"><i class="fa fa-times-o fa-2x"></button>
 				        </div>
 				    </div>
 				</div>
 			</div>
 			
+			<!-- Modal confirmar que quer excluir -->
+			<div id="confirmaExcluirModal" class="modal fade" >
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-body" style="padding: 5px 25px;">
+							<p>Confirma a exclusão do agendamento?</p>
+							<button type="button" ng-click="calendario.excluir()" class="btn btn-success" data-dismiss="modal">Sim</i></button>
+							<button type="button" onclick="$('#calendarModal').show()" class="btn btn-danger" data-dismiss="modal">Não</i></button>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<!-- Modal confirmar que quer cancelar o agendamento -->
+			<div id="confirmaCancelarModal" class="modal fade" >
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-body" style="padding: 5px 25px;">
+							<p>Confirma o cancelamento deste agendamento?</p>
+							<button type="button" ng-click="calendario.cancelar()" class="btn btn-success" data-dismiss="modal">Sim</i></button>
+							<button type="button" onclick="$('#calendarModal').show()" class="btn btn-danger" data-dismiss="modal">Não</i></button>
+						</div>
+					</div>
+				</div>
+			</div>
 			
 		</div>
 	</div>
