--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -56,8 +56,8 @@
 	<script src="././resources/js/bibliotecaJS/angular-route.min.js"></script>
 	
 	<!-- Calendario JS -->
-	<script src='././resources/js/bibliotecaJS/moment.min.js'></script>
-	<script src='././resources/js/bibliotecaJS/fullcalendar.min.js'></script>
+	<script src="././resources/js/bibliotecaJS/moment.min.js"></script>
+	<script src="././resources/js/bibliotecaJS/fullcalendar.min.js"></script>
 	
 	<!-- AMOSTRA DE TALENTOS -->
 	<script src="././resources/js/app.js"></script>
