--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -66,7 +66,9 @@
 	<script src="././resources/js/controller/login.controller.js"></script>
 	<script src="././resources/js/controller/menu.controller.js"></script>
 	<script src="././resources/js/controller/calendario.controller.js"></script>
-
+	<script src="././resources/js/controller/clientes.controller.js"></script>
+	<script src="././resources/js/controller/funcionarios.controller.js"></script>
+	
 	<!-- Services -->
 	<script src="././resources/js/service/login.service.js"></script>
 	<script src="././resources/js/service/calendario.service.js"></script>
