--- a/AmostraDeTalentos/src/main/webapp/funcionarios.html
+++ b/AmostraDeTalentos/src/main/webapp/funcionarios.html
@@ -5,7 +5,7 @@
 			<!-- Breadcrumbs-->
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-				<li class="breadcrumb-item active">Clientes</li>
+				<li class="breadcrumb-item active">Funcionários</li>
 			</ol>
 			<!-- Example DataTables Card-->
 			<div class="card mb-3">
