--- a/AmostraDeTalentos/src/main/webapp/home.html
+++ b/AmostraDeTalentos/src/main/webapp/home.html
@@ -51,10 +51,10 @@
 							<div class="panel-heading">
 								<div class="row">
 									<div class="col-xs-2">
-										<i class="fa fa-handshake-o fa-5x"></i>
+										<i class="fa fa-user fa-5x"></i>
 									</div>
 									<div class="col-xs-10 text-right">
-										<h2>Fornecedores</h2>
+										<h2>Funcionários</h2>
 									</div>
 								</div>
 							</div>
