--- a/AmostraDeTalentos/src/main/webapp/menu.html
+++ b/AmostraDeTalentos/src/main/webapp/menu.html
@@ -78,7 +78,7 @@
 			<ul class="nav navbar-nav side-nav">
 				<li class="active"><a href="#/agenda"><i class="fa fa-2x fa-calendar"></i><span class="item-menu-lateral">Agenda</span></a></li>
 				<li class="active"><a href="#/cliente"><i class="fa fa-2x fa-group"></i><span class="item-menu-lateral">Clientes</span></a></li>
-				<li class="active"><a href="#/fornecedor"><i class="fa fa-2x fa-handshake-o"></i><span class="item-menu-lateral">Fornecedores</span></a></li>
+				<li class="active"><a href="#/fornecedor"><i class="fa fa-2x fa-user"></i><span class="item-menu-lateral">Funcionários</span></a></li>
 				</ul>
 		</div>
 	</div>
