--- a/AmostraDeTalentos/src/main/webapp/clientes.html
+++ b/AmostraDeTalentos/src/main/webapp/clientes.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
 	<ng-include src="'menu.html'"></ng-include>
 	<div id="page-wrapper">
-		<div class="container-fluid">
+		<div class="container-fluid" ng-controller="ClientesController as cliente">
 			<!-- Breadcrumbs-->
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="#">Dashboard</a></li>
@@ -9,9 +9,6 @@
 			</ol>
 			<!-- Example DataTables Card-->
 			<div class="card mb-3">
-				<div class="card-header">
-					<i class="fa fa-table"></i> Data Table Example
-				</div>
 				<div class="card-body">
 					<div class="table-responsive">
 						<table class="table table-bordered" id="dataTable" width="100%"
@@ -26,23 +23,22 @@
 									<th>Telefone</th>
 									<th>Celular</th>
 									<th>E-mail</th>
-									<th>Ações</th>
-
+									<th colspan="2">Ações</th>
 								</tr>
 							</thead>
 							<tbody>
-								<tr>
-									<td>Antonio</td>
-									<td>Juliano</td>
-									<td>Masculino</td>
-									<td>15/11/1993</td>
-									<td>085.770.339-02</td>
-									<td>(47)####-####</td>
-									<td>(49)9917-3597</td>
-									<td>antoniojuliano6@gmail.com</td>
-									<td><a class="btn btn-primary btn-block" href="index.html"><i
-											class="fa fa-pencil-square-o" aria-hidden="true"></i></a> <a
-										class="btn btn-danger btn-block" href="index.html"><i
+								<tr ng-repeat="item in cliente.listaClientes">
+									<td>{{item.nome}}</td>
+									<td>{{item.sobrenome}}</td>
+									<td>{{item.sexo}}</td>
+									<td>{{item.data_nascimento}}</td>
+									<td>{{item.cpf}}</td>
+									<td>{{item.telefone}}</td>
+									<td>{{item.celular}}</td>
+									<td>{{item.email}}</td>
+									<td><a disabled class="btn btn-xs btn-primary btn-block" href="index.html"><i
+											class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
+									<td><a disabled class="btn btn-xs btn-danger btn-block" href="index.html"><i
 											class="fa fa-trash-o" aria-hidden="true"></i></a></td>
 											
 								</tr>
