--- a/AmostraDeTalentos/src/main/webapp/funcionarios.html
+++ b/AmostraDeTalentos/src/main/webapp/funcionarios.html
@@ -4,7 +4,7 @@
 		<div class="container-fluid" ng-controller="FuncionariosController as fun">
 			<!-- Breadcrumbs-->
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+				<li class="breadcrumb-item"><a href="#/home">Meu Painel</a></li>
 				<li class="breadcrumb-item active">Funcionários</li>
 			</ol>
 			<!-- Example DataTables Card-->
