--- a/AmostraDeTalentos/src/main/webapp/index.html
+++ b/AmostraDeTalentos/src/main/webapp/index.html
@@ -68,6 +68,7 @@
 	<script src="././resources/js/controller/calendario.controller.js"></script>
 	<script src="././resources/js/controller/clientes.controller.js"></script>
 	<script src="././resources/js/controller/funcionarios.controller.js"></script>
+	<script src="././resources/js/controller/perfil.controller.js"></script>
 	
 	<!-- Services -->
 	<script src="././resources/js/service/login.service.js"></script>
