--- a/AmostraDeTalentos/src/main/webapp/home.html
+++ b/AmostraDeTalentos/src/main/webapp/home.html
@@ -6,7 +6,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<h1 class="page-header">
-							Welcome
+							Bem vindo!
 						</h1>
 						<ol class="breadcrumb">
 							<li class="active"><i class="fa fa-dashboard"></i> Meu painel
@@ -33,32 +33,36 @@
 						</a>
 					</div>
 					<div class="col-lg-4 col-md-6">
-						<div class="panel panel-green">
-							<div class="panel-heading">
-								<div class="row">
-									<div class="col-xs-2">
-										<i class="fa fa-group fa-5x"></i>
-									</div>
-									<div class="col-xs-10 text-right">
-										<h2>Clientes</h2>
+						<a href="#/cliente">
+							<div class="panel panel-green">
+								<div class="panel-heading">
+									<div class="row">
+										<div class="col-xs-2">
+											<i class="fa fa-group fa-5x"></i>
+										</div>
+										<div class="col-xs-10 text-right">
+											<h2>Clientes</h2>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 					<div class="col-lg-4 col-md-6">
-						<div class="panel panel-yellow">
-							<div class="panel-heading">
-								<div class="row">
-									<div class="col-xs-2">
-										<i class="fa fa-user fa-5x"></i>
-									</div>
-									<div class="col-xs-10 text-right">
-										<h2>Funcionários</h2>
+						<a href="#/funcionario">
+							<div class="panel panel-yellow">
+								<div class="panel-heading">
+									<div class="row">
+										<div class="col-xs-2">
+											<i class="fa fa-user fa-5x"></i>
+										</div>
+										<div class="col-xs-10 text-right">
+											<h2>Funcionários</h2>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 			</div>
