--- a/AmostraDeTalentos/src/main/webapp/login.html
+++ b/AmostraDeTalentos/src/main/webapp/login.html
@@ -1,28 +1,38 @@
 <div ng-controller="LoginController as ctrl" class="main">
 	<div class="container">
 		<form name="login" ng-submit="ctrl.efetuarLogin()">
-			<div style="width: 55%">
-				<div class="left col-lg-6">
+			<div class="row">
+				<div class="col-lg-3 col-md-2 hidden-sm hidden-xs"></div>
+				<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 					<div class="row">
-						<span class="login fa fa-user"></span>
-						<input class="login" type="text" placeholder="Username" ng-model="ctrl.usuario" required>
-					</div>
-					<div class="row">
-						<span class="login fa fa-lock"></span>
-						<input class="login" type="password" placeholder="Password" ng-model="ctrl.senha" required>
-					</div>
-					<div class="row">
-						<span class="col-lg-6" style="text-align: left; display: inline-block;">
-							<a class="small-text" href="#">Forgot password?</a>
-						</span> 
-						<span class="col-lg-5" style="text-align: right; display: inline-block;">
-							<input class="login" type="submit" value="Login"/>
-						</span>
-					</div>
-				</div>
-				<div class="right border-left col-lg-6">
-					<div  class="row space-Left">
-						<img class="img-logo" src="././resources/img/Logo_Principal.png" />
+						<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12">
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<span class="login fa fa-user"></span> <input class="login"
+										type="text" placeholder="Usuário" ng-model="ctrl.usuario"
+										required>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<span class="login fa fa-lock"></span> <input class="login"
+										type="password" placeholder="Senha" ng-model="ctrl.senha"
+										required>
+								</div>
+							</div>
+							<div class="row">
+								<span class="col-lg-7 col-md-7 col-sm-8 col-xs-12"
+									style="text-align: left; display: inline-block;"> <a
+									class="small-text" href="#">Esqueceu sua senha?</a>
+								</span> <span class="col-lg-5 col-md-5 col-sm-4 col-xs-12"
+									style="text-align: right; display: inline-block;"> <input
+									class="login" type="submit" value="Entrar" />
+								</span>
+							</div>
+						</div>
+						<div class="border-logo col-lg-6 col-md-6 col-sm-4 col-xs-12">
+							<img class="img-responsive" height="160px" src="././resources/img/Logo_Principal.png" />
+						</div>
 					</div>
 				</div>
 			</div>
@@ -30,6 +40,10 @@
 	</div>
 </div>
 <div class="footer">
-	<div class="left">Halle Systems Co.</div>
-	<div class="right">All rights reserved.</div>
+	<div class="left">
+		<span class="tamanhofonterodape">Halle Systems Co.</span>
+	</div>
+	<div class="right">
+		<span class="tamanhofonterodape">All rights reserved.</span>
+	</div>
 </div>
