--- a/AmostraDeTalentos/src/main/webapp/menu.html
+++ b/AmostraDeTalentos/src/main/webapp/menu.html
@@ -3,12 +3,15 @@
 	<div ng-controller="MenuController as menu">
 	<!-- Brand and toggle get grouped for better mobile display -->
 		
-		<div class="navbar-header col-lg-10">
-			<a class="navbar-brand navBarHeader" href="#/home">Halle Systems</a>
+		<div class="navbar-header col-lg-10 col-md-10 col-sm-9 col-xs-12">
+			<a class="navbar-brand navBarHeader col-lg-12 col-md-12 col-sm-12 col-xs-10" href="#/home">Halle Systems</a>
+			<a class="navbar-brand navBarHeader hidden-lg hidden-md hidden-sm col-xs-2" data-toggle="collapse" data-target="#menuCollapse"><i class="fa fa-bars"></i></a>
 		</div>
+		<!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+		
 		<!-- Top Menu Items -->
-		<ul class="nav navbar-right navBarHeaderRight col-lg-2">
-			<li class="dropdown col-lg-3">
+		<ul class="nav navbar-right navBarHeaderRight col-lg-2 col-md-2 col-sm-3 col-xs-12">
+			<li class="dropdown col-lg-3 hidden">
 				<div class="row dropdown-toggle" data-toggle="dropdown">
 					<i class="fa fa-envelope fa-2x"></i> 
 					<b class="caret"></b>
@@ -49,7 +52,7 @@
 					<li class="message-footer"><a href="#/home">Read All New
 							Messages</a></li>
 				</ul></li>
-			<li class="dropdown col-lg-3">
+			<li class="dropdown col-lg-3 hidden">
 				<div class="row dropdown-toggle" data-toggle="dropdown" ng-click="menu.pegarNotificacoes()">
 					<i class="fa fa-bell fa-2x"></i> 
 					<b class="caret"></b>
@@ -59,26 +62,33 @@
 						<li class="notificacoes"><a href="#/agenda"><span class="label label-{{not.tipo}} ">{{not.titulo}}</span></a></li>
 					</div>
 				</ul></li>
-			<li class="dropdown col-lg-6">
-				<div class="row dropdown-toggle" data-toggle="dropdown">
+			<li class="dropdown col-lg-12 col-md-12 col-sm-12 col-xs-12 corperfil">
+				<div class="row dropdown-toggle align-div-right" data-toggle="dropdown">
 					<i class="fa fa-user fa-2x"></i>
 					{{menu.usuario}} 
 					<b class="caret"></b>
 				</div>
 				<ul class="dropdown-menu">
 					<li><a href="#/perfil"><i class="fa fa-fw fa-user"></i> Perfil</a></li>
-					<li><a href="#/configuracoes"><i class="fa fa-fw fa-gear"></i> Configurações</a></li>
+					<li class="hidden"><a href="#/configuracoes"><i class="fa fa-fw fa-gear"></i> Configurações</a></li>
 					<li class="divider"></li>
 					<li><a ng-click="menu.logout()"><i class="fa fa-fw fa-power-off"></i> Sair</a></li>
 				</ul></li>
 		</ul>
-		
-		<!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-		<div class="collapse navbar-collapse navbar-ex1-collapse">
+		<div class="collapse navbar-collapse navbar-ex1-collapse hidden-lg hidden-sm hidden-md" id="menuCollapse">
 			<ul class="nav navbar-nav side-nav">
 				<li class="active"><a href="#/agenda"><i class="fa fa-2x fa-calendar"></i><span class="item-menu-lateral">Agenda</span></a></li>
 				<li class="active"><a href="#/cliente"><i class="fa fa-2x fa-group"></i><span class="item-menu-lateral">Clientes</span></a></li>
-				<li class="active"><a href="#/fornecedor"><i class="fa fa-2x fa-user"></i><span class="item-menu-lateral">Funcionários</span></a></li>
+				<li class="active"><a href="#/funcionario"><i class="fa fa-2x fa-user"></i><span class="item-menu-lateral">Funcionários</span></a></li>
+				</ul>
+		</div>
+		
+		<!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+		<div class="collapse navbar-collapse navbar-ex1-collapse" id="menu">
+			<ul class="nav navbar-nav side-nav">
+				<li class="active"><a href="#/agenda"><i class="fa fa-2x fa-calendar"></i><span class="item-menu-lateral">Agenda</span></a></li>
+				<li class="active"><a href="#/cliente"><i class="fa fa-2x fa-group"></i><span class="item-menu-lateral">Clientes</span></a></li>
+				<li class="active"><a href="#/funcionario"><i class="fa fa-2x fa-user"></i><span class="item-menu-lateral">Funcionários</span></a></li>
 				</ul>
 		</div>
 	</div>
